[package]
name = "skiprm"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "skip-rm"
path = "src/main.rs"

[dependencies]
expanduser = "1.2.2"
path-absolutize = "3.0.14"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
